--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="TemplateData/favicon.ico" />
     <script src="TemplateData/UnityProgress.js"></script>
   </head>
-  <body class="template">
+  <body class="template" bgcolor="black">
     <p class="header"><span>Unity WebGL | </span>Project SHIP</p>
     <div class="template-wrap clear">
       <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" height="750px" width="600px"></canvas>
