--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <br>
       <div class="logo"></div>
       <div class="fullscreen"><img src="TemplateData/fullscreen.png" width="38" height="38" alt="Fullscreen" title="Fullscreen" onclick="SetFullscreen(1);" /></div>
-      <div class="download"><img src="TemplateData/download.png" width="38" height="38" alt="Download" title="Download" onclick="SetFullscreen(1);" /></div>
+      <div class="download"><img src="TemplateData/download.png" width="38" height="38" alt="Download" title="Download" href="github.com" /></div>
       <div class="title">Project SHIP</div>
     </div>
     <script type='text/javascript'>
