--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <br>
       <div class="logo"></div>
       <div class="fullscreen"><img src="TemplateData/fullscreen.png" width="38" height="38" alt="Fullscreen" title="Fullscreen" onclick="SetFullscreen(1);" /></div>
-      <div class="download"><img src="TemplateData/download.png" width="38" height="38" alt="Download" title="Download" href="github.com" /></div>
+      <div class="download"><img src="TemplateData/download.png" width="38" height="38" alt="Download" title="Download" onclick="window.location.href='https://eduklgor-my.sharepoint.com/personal/manuel_jurkovic_edu_klg_or_at/_layouts/15/guestaccess.aspx?guestaccesstoken=WV3%2bZKcvVILcqSwWF%2f4quhEvTKCLfpxRltzgEVR4%2b9I%3d&docid=0eb9cb1ba63c24ddd8f49a022fe66ba25&rev=1'" /></div>
       <div class="title">Project SHIP</div>
     </div>
     <script type='text/javascript'>
