--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Word.Document>
 <meta name=Generator content="Microsoft Word 15">
 <meta name=Originator content="Microsoft Word 15">
+<title>Project SHIP</title>
 <link rel=File-List href="index-Dateien/filelist.xml">
 <link rel=themeData href="index-Dateien/themedata.thmx">
 <link rel=colorSchemeMapping href="index-Dateien/colorschememapping.xml">
@@ -20,7 +21,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <div class=WordSection1>
 
 <p class=MsoNormal><span lang=DE-AT style='font-size:48.0pt;line-height:106%;
-font-family:"Agency FB",sans-serif;color:white;mso-themecolor:background1'>PROJECT
+font-family:"Agency FB",sans-serif;color:white;mso-themecolor:background1'>Project
 S.H.I.P<o:p></o:p></span></p>
 
 <p class=MsoNormal><span lang=DE-AT style='font-size:22.0pt;line-height:106%;
