--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Word.Document>
 <meta name=Generator content="Microsoft Word 15">
 <meta name=Originator content="Microsoft Word 15">
-<title>Project SHIP</title>
+<title>ToadsworthLP's Website</title>
 <link rel=File-List href="index-Dateien/filelist.xml">
 <link rel=themeData href="index-Dateien/themedata.thmx">
 <link rel=colorSchemeMapping href="index-Dateien/colorschememapping.xml">
