--- a/index.html
+++ b/index.html
@@ -1,99 +1,33 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
-xmlns:o="urn:schemas-microsoft-com:office:office"
-xmlns:w="urn:schemas-microsoft-com:office:word"
-xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"
-xmlns="http://www.w3.org/TR/REC-html40">
-
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
-<meta name=ProgId content=Word.Document>
-<meta name=Generator content="Microsoft Word 15">
-<meta name=Originator content="Microsoft Word 15">
-<title>ToadsworthLP's Website</title>
-<link rel=File-List href="index-Dateien/filelist.xml">
-<link rel=themeData href="index-Dateien/themedata.thmx">
-<link rel=colorSchemeMapping href="index-Dateien/colorschememapping.xml">
+	<title>Underbird</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+<body>
+	<h1>UNDERBIRD</h1><br>
+	The Zelda x Undertale crossover game!<br><br>
+	<img src="img/underbird.png"><br><br><br>
+	<a href="Underbird.zip">DOWNLOAD IT HERE</a><br><br>
+	---INTRODUCTION---<br>
+	Just like UNDERTALE itself, this game offers 3 ways to play it:<br>
+-The Genocide route: Kill Revali, and you're good to go.<br>It's that simple, but not at all satisfying.<br>
+-The Neutral route: Probably the easiest one. This will<br>occur if you don't meet the requirements for<br>
+the Pacifist route, but you couldn't kill Revali fast<br>enough. Let's just say he's a bit...impatient.<br>
+You can't win this theoretically, but if you reach my secret<br>message, well, what's wrong with you?<br>
+-The Pacifist route: Without a doubt the hardest way, but<br> the most satisfying. You have to ACT<br>
+appropritately at specific times, which can be kinda hard to<br> figure out. It should be possible, however,<br>
+since Revali gives you hints whenever you need to ACT. Just<br> read the text.<br>
+<br><br>
+---CONTROLS---<br>
+W,A,S,D: Move SOUL or select option<br>
+SPACE: Choose option<br>
+SHIFT/BACKSPACE: Go back to previous menu (For example,<br> press it in the ACT menu to return to the action selection)<br>
+F11: Toggle fullscreen mode<br>
+<br><br>
+---CREDITS---<br>
+Created by me (ToadsworthLP)<br>
+Attack on Vah Medoh 8-bit remix by Loeder<br>
+Revali sprite by ahruon, edited by me<br>
+All UNDERTALE graphics, sound effects,... by Toby Fox<br>
 
-<body bgcolor=black lang=DE link="#0563C1" vlink="#954F72" style='tab-interval:
-35.4pt'>
-
-<div class=WordSection1>
-
-<p class=MsoNormal><span lang=DE-AT style='font-size:48.0pt;line-height:106%;
-font-family:"Agency FB",sans-serif;color:white;mso-themecolor:background1'>Project
-S.H.I.P<o:p></o:p></span></p>
-
-<p class=MsoNormal><span lang=DE-AT style='font-size:22.0pt;line-height:106%;
-font-family:"Agency FB",sans-serif'><o:p>&nbsp;</o:p></span></p>
-
-<p class=MsoNormal><span lang=DE-AT style='font-size:22.0pt;line-height:106%;
-font-family:"Agency FB",sans-serif'><a
-href="https://toadsworthlp.github.io/play.html">Im Browser spielen -&gt;</a><o:p></o:p></span></p>
-
-<p class=MsoNormal><span lang=DE-AT style='font-size:22.0pt;line-height:106%;
-font-family:"Agency FB",sans-serif'><a
-href="https://eduklgor-my.sharepoint.com/personal/manuel_jurkovic_edu_klg_or_at/_layouts/15/guestaccess.aspx?guestaccesstoken=WV3%2bZKcvVILcqSwWF%2f4quhEvTKCLfpxRltzgEVR4%2b9I%3d&amp;docid=0eb9cb1ba63c24ddd8f49a022fe66ba25&amp;rev=1">Windows-Download
--&gt;</a><o:p></o:p></span></p>
-
-<p class=MsoNormal><span lang=DE-AT style='font-size:22.0pt;line-height:106%;
-font-family:"Agency FB",sans-serif'><a
-href="https://eduklgor-my.sharepoint.com/personal/manuel_jurkovic_edu_klg_or_at/_layouts/15/guestaccess.aspx?guestaccesstoken=gPv9U7qP0gjQgDv8Jj%2f2fViG%2b2dBrc1A0RcsYFW9vkI%3d&amp;docid=09ec18a8ab17d45588ec6de31001de303&amp;rev=1">APK-Download
--&gt;</a><o:p></o:p></span></p>
-
-<p class=MsoNormal><span lang=DE-AT style='font-size:22.0pt;line-height:106%;
-font-family:"Agency FB",sans-serif'><o:p>&nbsp;</o:p></span></p>
-
-<p class=MsoNormal><span class=SpellE><span lang=DE-AT style='font-size:48.0pt;
-line-height:106%;font-family:"Agency FB",sans-serif;color:white;mso-themecolor:
-background1'>Undertale</span></span><span lang=DE-AT style='font-size:48.0pt;
-line-height:106%;font-family:"Agency FB",sans-serif;color:white;mso-themecolor:
-background1'> Battle<o:p></o:p></span></p>
-
-<p class=MsoNormal><span lang=DE-AT style='font-size:22.0pt;line-height:106%;
-font-family:"Agency FB",sans-serif'><o:p>&nbsp;</o:p></span></p>
-
-<p class=MsoNormal><span lang=DE-AT style='font-size:22.0pt;line-height:106%;
-font-family:"Agency FB",sans-serif'><a
-href="https://eduklgor-my.sharepoint.com/personal/manuel_jurkovic_edu_klg_or_at/_layouts/15/guestaccess.aspx?guestaccesstoken=JDdwuk1lYnUNretcHN8%2bA7L7xH1qkJKdQbvB%2biOVvvs%3d&amp;docid=070cf043bec81496ebe975f775c85c517&amp;rev=1"><span
-class=SpellE>GameMaker</span> 8.1-Projektdatei -&gt;<o:p></o:p></a></span></p>
-
-<p class=MsoNormal><span lang=DE-AT style='font-size:22.0pt;line-height:106%;
-font-family:"Agency FB",sans-serif'><a
-href="https://eduklgor-my.sharepoint.com/personal/manuel_jurkovic_edu_klg_or_at/_layouts/15/guestaccess.aspx?guestaccesstoken=9evk%2fTp2Isjy6S4keo7ixf%2fRC%2b8t%2fYXZnnFnVrw8Mv4%3d&amp;docid=01042239eccab49a8a775979ea1646c36&amp;rev=1">Windows-Download
--&gt;</a><o:p></o:p></span></p>
-
-<p class=MsoNormal><span lang=DE-AT style='font-size:22.0pt;line-height:106%;
-font-family:"Agency FB",sans-serif'><o:p>&nbsp;</o:p></span></p>
-
-<p class=MsoNormal><span class=SpellE><span lang=DE-AT style='font-size:48.0pt;
-line-height:106%;font-family:"Agency FB",sans-serif;color:white;mso-themecolor:
-background1'>GameMaker</span></span><span lang=DE-AT style='font-size:48.0pt;
-line-height:106%;font-family:"Agency FB",sans-serif;color:white;mso-themecolor:
-background1'> Demos<o:p></o:p></span></p>
-
-<p class=MsoNormal><span lang=DE-AT style='font-size:22.0pt;line-height:106%;
-font-family:"Agency FB",sans-serif;color:white;mso-themecolor:background1'><o:p>&nbsp;</o:p></span></p>
-
-<p class=MsoNormal><span lang=DE-AT style='font-size:22.0pt;line-height:106%;
-font-family:"Agency FB",sans-serif'><a
-href="https://eduklgor-my.sharepoint.com/personal/manuel_jurkovic_edu_klg_or_at/_layouts/15/guestaccess.aspx?guestaccesstoken=yhDAmLDaXB9fYuFZFu8MxDQIpGaInjyPUg%2b3RbN6Utg%3d&amp;docid=048c2ddc4492f43b3a8dc702c3d21dde9&amp;rev=1">ZIP
-mit allen Projektdateien -&gt;<o:p></o:p></a></span></p>
-
-<p class=MsoNormal><span lang=DE-AT style='font-size:22.0pt;line-height:106%;
-font-family:"Agency FB",sans-serif'><o:p>&nbsp;</o:p></span></p>
-
-<p class=MsoNormal><span lang=DE-AT style='font-size:20.0pt;line-height:106%;
-font-family:"Agency FB",sans-serif'><o:p>&nbsp;</o:p></span></p>
-
-<p class=MsoNormal><span lang=DE-AT style='font-size:16.0pt;line-height:106%;
-font-family:"Agency FB",sans-serif;color:#7F7F7F;mso-themecolor:background1;
-mso-themeshade:128;mso-style-textfill-fill-color:#7F7F7F;mso-style-textfill-fill-themecolor:
-background1;mso-style-textfill-fill-alpha:100.0%;mso-style-textfill-fill-colortransforms:
-lumm=50000'>By Manuel / <span class=SpellE>ToadsworthLP</span><o:p></o:p></span></p>
-
-</div>
-
+I hope you'll have a lot of fun with this game, Haley! (And<br> everyone else who plays this!)<br>
 </body>
-
-</html>
