--- a/Underbird/index.html
+++ b/Underbird/index.html
@@ -4,7 +4,8 @@
 </head>
 <body>
 	<h1>UNDERBIRD</h1><br>
-	The Zelda x Undertale crossover game!<br><br>
+	A Zelda BotW x Undertale crossover game where you<br>can fight everyone's favourite a**hole!
+	<br><br>WARNING! Contains spoilers for The Legend Of Zelda: Breath Of The Wild<br>and Undertale!<br><br>
 	<img src="img/underbird.png"><br><br><br>
 	<a href="Underbird.zip">DOWNLOAD IT HERE</a><br><br>
 	---INTRODUCTION---<br>
@@ -28,6 +29,7 @@ Created by me (ToadsworthLP)<br>
 Attack on Vah Medoh 8-bit remix by Loeder<br>
 Revali sprite by ahruon, edited by me<br>
 All UNDERTALE graphics, sound effects,... by Toby Fox<br>
+Haley Ojedi for the inspiration
 
-I hope you'll have a lot of fun with this game, Haley! (And<br> everyone else who plays this!)<br>
+I hope you'll have a lot of fun with this game!<br>
 </body>
