--- a/Underbird/index.html
+++ b/Underbird/index.html
@@ -32,4 +32,5 @@ All UNDERTALE graphics, sound effects,... by Toby Fox<br>
 Haley Ojedi for the inspiration
 
 I hope you'll have a lot of fun with this game!<br>
+PS: I know the HP amount in the screenshot isn't correct!<br>I updated it right after taking the picture!
 </body>
