--- a/Underbird/index.html
+++ b/Underbird/index.html
@@ -6,6 +6,7 @@
 	<h1>UNDERBIRD</h1><br>
 	A Zelda BotW x Undertale crossover game where you<br>can fight everyone's favourite a**hole!
 	<br><br>WARNING! Contains spoilers for The Legend Of Zelda: Breath Of The Wild<br>and Undertale!<br><br>
+	Current version: v1.0.0.1 (updated on 20.6.2017)<br><br>
 	<img src="img/underbird.png"><br><br><br>
 	<a href="Underbird.zip">DOWNLOAD IT HERE</a><br><br>
 	---INTRODUCTION---<br>
@@ -24,6 +25,11 @@ SPACE: Choose option<br>
 SHIFT/BACKSPACE: Go back to previous menu (For example,<br> press it in the ACT menu to return to the action selection)<br>
 F11: Toggle fullscreen mode<br>
 <br><br>
+---CHANGELOG---<br>
+v1.0.0.1:<br>
+	+ Fixed a bug that glitched the dodging box<br>
+	+ Made one attack slightly easier to dodge
+<br><br>
 ---CREDITS---<br>
 Created by me (ToadsworthLP)<br>
 Attack on Vah Medoh 8-bit remix by Loeder<br>
@@ -31,6 +37,6 @@ Revali sprite by ahruon, edited by me<br>
 All UNDERTALE graphics, sound effects,... by Toby Fox<br>
 Haley Ojedi for the inspiration
 
-I hope you'll have a lot of fun with this game!<br>
+I hope you'll have a lot of fun with this game!<br><br>
 PS: I know the HP amount in the screenshot isn't correct!<br>I updated it right after taking the picture!
 </body>
