--- a/Underbird/index.html
+++ b/Underbird/index.html
@@ -37,6 +37,5 @@ Revali sprite by ahruon, edited by me<br>
 All UNDERTALE graphics, sound effects,... by Toby Fox<br>
 Haley Ojedi for the inspiration
 
-I hope you'll have a lot of fun with this game!<br><br>
-PS: I know the HP amount in the screenshot isn't correct!<br>I updated it right after taking the picture!
+I hope you'll have a lot of fun with this game!
 </body>
