--- a/Underbird/index.html
+++ b/Underbird/index.html
@@ -10,7 +10,8 @@
 	<img src="img/underbird.png"><br><br><br>
 	<a href="Underbird.zip">DOWNLOAD IT HERE</a><br><br>
 	---INTRODUCTION---<br>
-	Just like UNDERTALE itself, this game offers 3 ways to play it:<br>
+This fight takes place on Vah Medoh after Revali challenged<br>Link in "his" memory.
+Just like UNDERTALE itself, this game offers 3 ways to play it:<br>
 -The Genocide route: Kill Revali, and you're good to go.<br>It's that simple, but not at all satisfying.<br>
 -The Neutral route: Probably the easiest one. This will<br>occur if you don't meet the requirements for<br>
 the Pacifist route, but you couldn't kill Revali fast<br>enough. Let's just say he's a bit...impatient.<br>
@@ -36,6 +37,6 @@ Attack on Vah Medoh 8-bit remix by Loeder<br>
 Revali sprite by ahruon, edited by me<br>
 All UNDERTALE graphics, sound effects,... by Toby Fox<br>
 Haley Ojedi for the inspiration
-
+<br>
 I hope you'll have a lot of fun with this game!
 </body>
