--- a/Underbird/index.html
+++ b/Underbird/index.html
@@ -21,7 +21,7 @@ appropritately at specific times, which can be kinda hard to<br> figure out. It 
 since Revali gives you hints whenever you need to ACT. Just<br> read the text.<br>
 <br><br>
 ---CONTROLS---<br>
-W,A,S,D: Move SOUL or select option<br>
+Arrow Keys: Move SOUL or select option<br>
 SPACE: Choose option<br>
 SHIFT/BACKSPACE: Go back to previous menu (For example,<br> press it in the ACT menu to return to the action selection)<br>
 F11: Toggle fullscreen mode<br>
