--- a/Underbird/index.html
+++ b/Underbird/index.html
@@ -10,12 +10,12 @@
 	<img src="img/underbird.png"><br><br><br>
 	<a href="Underbird.zip">DOWNLOAD IT HERE</a><br><br>
 	---INTRODUCTION---<br>
-This fight takes place on Vah Medoh after Revali challenged<br>Link in "his" memory.
+This fight takes place on Vah Medoh after Revali challenged<br>Link in "his" memory.<br>
 Just like UNDERTALE itself, this game offers 3 ways to play it:<br>
 -The Genocide route: Kill Revali, and you're good to go.<br>It's that simple, but not at all satisfying.<br>
 -The Neutral route: Probably the easiest one. This will<br>occur if you don't meet the requirements for<br>
 the Pacifist route, but you couldn't kill Revali fast<br>enough. Let's just say he's a bit...impatient.<br>
-You can't win this theoretically, but if you reach my secret<br>message, well, what's wrong with you?<br>
+You can't win this in theory, but if you reach my secret<br>message, well, what's wrong with you?<br>
 -The Pacifist route: Without a doubt the hardest way, but<br> the most satisfying. You have to ACT<br>
 appropritately at specific times, which can be kinda hard to<br> figure out. It should be possible, however,<br>
 since Revali gives you hints whenever you need to ACT. Just<br> read the text.<br>
